log
Wed 27 Mar 2024 06:00:23 PM UTC: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: expected ‘;’ before ‘return’
   36 |      return lista;
      |      ^~~~~~
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
list.c: In function ‘createList’:
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
946fe62
Wed 27 Mar 2024 06:00:25 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: expected ‘;’ before ‘return’
   36 |      return lista;
      |      ^~~~~~
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
list.c: In function ‘createList’:
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e69549d
Wed 27 Mar 2024 06:01:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: expected ‘;’ before ‘return’
   36 |      return lista;
      |      ^~~~~~
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
list.c: In function ‘createList’:
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a7e2a3b
Wed 27 Mar 2024 06:01:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
Compilation failed
247f869
Wed 27 Mar 2024 06:02:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fd8332e
Wed 27 Mar 2024 06:02:47 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 25/70
a658428
Wed 27 Mar 2024 06:07:11 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
list.c:83:1: error: expected identifier or ‘(’ before ‘}’ token
   83 | }
      | ^
Compilation failed
c26cd8d
Wed 27 Mar 2024 06:07:26 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
f5fa8b3
Wed 27 Mar 2024 06:16:23 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
list.c:104:32: error: expected ‘;’ before ‘}’ token
  104 |       list->current = nuevoNODO
      |                                ^
      |                                ;
  105 |     }
      |     ~                           
Compilation failed
710ade4
Wed 27 Mar 2024 06:16:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
47a59fe
Wed 27 Mar 2024 06:16:57 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:121:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  121 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:112:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  112 | void * popBack(List * list) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4389b61
Wed 27 Mar 2024 06:17:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a65c488
